AIJobPlatform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aijobplatform-ingress
  namespace: aijobplatform

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aijobplatform-frontend
                port:
                  number: 80
